tests/fail/elaboration/mismatched-array-length/array32.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/mismatched-array-length/array32.fathom:3:1
  │
3 │ [1] : Array32 3 U32
  │ ^^^ array with invalid length
  │
  = expected length 3
  =    found length 1

'''
